objects/vlocity_cmt__AccountAdServer__c.object
<CustomObject>
    <description>The Account Ad Server captures the mapping of an Account with an Ad Server.</description>
    <fields>
        <fullName>vlocity_cmt__AdServerAdvertiserIdentifier__c</fullName>
        <description>This captures the AdvertiserId  in the Ad Server.</description>
        <externalId>true</externalId>
        <label>Ad Server Advertiser Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdServerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ad Server to which the mapping is created.</description>
        <label>Ad Server</label>
        <referenceTo>vlocity_cmt__AdServer__c</referenceTo>
        <relationshipLabel>Account Ad Servers</relationshipLabel>
        <relationshipName>AccountAdServers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdvertiserId__c</fullName>
        <description>Advertiser account mapped to the Ad Server.</description>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Ad Servers</relationshipLabel>
        <relationshipName>AccountAdServers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Ad Server</label>
    <nameField>
        <label>Account Ad Server Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Ad Servers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>